--- a/Main2.ipynb
+++ b/Main2.ipynb
@@ -2,15 +2,196 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#import the dataset and strip off unwanted columns \n",
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.read_csv('US_Accidents_March23.csv', dtype={\"fips\": str})\n",
+    "df = df[['Severity', 'Start_Time', 'End_Time', 'Start_Lat', 'Start_Lng', 'End_Lat', 'End_Lng', 'Distance(mi)', 'Street', 'City', 'County', 'State', 'Zipcode', 'Temperature(F)','Wind_Chill(F)', 'Humidity(%)','Pressure(in)', 'Visibility(mi)', 'Wind_Speed(mph)', 'Precipitation(in)', 'Weather_Condition', 'Crossing', 'Junction', 'Stop', 'Traffic_Signal', 'Sunrise_Sunset']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Severity', 'Start_Time', 'End_Time', 'Start_Lat', 'Start_Lng',\n",
+       "       'End_Lat', 'End_Lng', 'Distance(mi)', 'Street', 'City', 'County',\n",
+       "       'State', 'Zipcode', 'Temperature(F)', 'Wind_Chill(F)', 'Humidity(%)',\n",
+       "       'Pressure(in)', 'Visibility(mi)', 'Wind_Speed(mph)',\n",
+       "       'Precipitation(in)', 'Weather_Condition', 'Crossing', 'Junction',\n",
+       "       'Stop', 'Traffic_Signal', 'Sunrise_Sunset', 'Mailing_Zip'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[['Zipcode', 'Mailing_Zip']] = df['Zipcode'].str.split('-', expand=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      Zipcode  entry_count  entry_count_scaled\n",
+      "0       01001           16            1.204120\n",
+      "1       01002           23            1.361728\n",
+      "2       01003            1            0.000000\n",
+      "3       01005           18            1.255273\n",
+      "4       01007           25            1.397940\n",
+      "...       ...          ...                 ...\n",
+      "24231   99361            5            0.698970\n",
+      "24232   99362           16            1.204120\n",
+      "24233   99371            3            0.477121\n",
+      "24234   99401            7            0.845098\n",
+      "24235   99403            1            0.000000\n",
+      "\n",
+      "[24236 rows x 3 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "county_entry_counts = df.groupby('Zipcode').size().reset_index(name='entry_count')\n",
+    "\n",
+    "county_entry_counts['entry_count_scaled'] = np.log10(county_entry_counts['entry_count'])\n",
+    "\n",
+    "print(county_entry_counts)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#import the geojson for US counties \n",
+    "from urllib.request import urlopen\n",
+    "import json\n",
+    "with urlopen('https://raw.githubusercontent.com/plotly/datasets/master/geojson-counties-fips.json') as response:\n",
+    "    counties = json.load(response)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'type': 'Feature',\n",
+       " 'properties': {'GEO_ID': '0500000US01001',\n",
+       "  'STATE': '01',\n",
+       "  'COUNTY': '001',\n",
+       "  'NAME': 'Autauga',\n",
+       "  'LSAD': 'County',\n",
+       "  'CENSUSAREA': 594.436},\n",
+       " 'geometry': {'type': 'Polygon',\n",
+       "  'coordinates': [[[-86.496774, 32.344437],\n",
+       "    [-86.717897, 32.402814],\n",
+       "    [-86.814912, 32.340803],\n",
+       "    [-86.890581, 32.502974],\n",
+       "    [-86.917595, 32.664169],\n",
+       "    [-86.71339, 32.661732],\n",
+       "    [-86.714219, 32.705694],\n",
+       "    [-86.413116, 32.707386],\n",
+       "    [-86.411172, 32.409937],\n",
+       "    [-86.496774, 32.344437]]]},\n",
+       " 'id': '01001'}"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "counties['features'][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import plotly.express as px\n",
+    "import plotly.io as pio\n",
+    "pio.renderers.default = 'firefox'\n",
+    "\n",
+    "fig = px.choropleth_mapbox(\n",
+    "    county_entry_counts,\n",
+    "    geojson=counties,\n",
+    "    locations= county_entry_counts['Zipcode'],  # Replace 'FIPS' with the actual column name in your DataFrame\n",
+    "    color='entry_count_scaled',  # Replace 'Density' with the column you want to visualize\n",
+    "    hover_name='Zipcode',  # Replace 'County' with the column containing county names\n",
+    "    mapbox_style=\"carto-positron\",\n",
+    "    center=dict(lat=37.0902, lon=-95.7129),\n",
+    "    zoom=3,\n",
+    "    opacity=0.7,\n",
+    "    title='Density Car Crash Map of the Continental US'\n",
+    ")\n",
+    "\n",
+    "fig.update_layout(\n",
+    "    coloraxis_colorbar=dict(\n",
+    "        title='Density'\n",
+    "        # Adjust tick labels as needed\n",
+    "    )\n",
+    ")\n",
+    "\n",
+    "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from dash import Dash, html, dash_table, dcc\n",
+    "import plotly.express as px\n",
+    "import pandas as pd"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3.10.2 64-bit",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.2"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+   }
   }
  },
  "nbformat": 4,
