random forest commit

--- a/Statistical_methods.ipynb
+++ b/Statistical_methods.ipynb
@@ -127,7 +127,7 @@
    "source": [
     "import scipy \n",
     "\n",
-    "_, p, _, _ = scipy.stats.chi2_contingiency(table)"
+    "#_, p, _, _ = scipy.stats.chi2_contingiency(table)"
    ]
   }
  ],
